loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:-35: error: Unmatched closing brace '}' ignored here
	}
        ^LoopCourse:-34: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^LoopCourse:-29: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^LoopCourse:-16: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^LoopCourse:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^